<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.footballscore.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_marginTop="16dp"
            android:id="@+id/layout_zamalek"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <TextView
                    android:paddingBottom="8dp"
                    android:textSize="14sp"
                    android:textColor="#616161"
                    android:fontFamily="sans-serif-medium"
                    android:id="@+id/zamalek_Text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/zamalek_team"
                    android:textStyle="bold"
                    />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/zamalek_Text_view"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:src="@drawable/zamalek" />

            </RelativeLayout>

            <TextView
                android:fontFamily="sans-serif-light"
                android:textColor="#000000"
                android:id="@+id/zamalek_goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:text="0"
                android:textSize="56sp" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/goal_zamalek"
                android:onClick="addGoalForZamalek"/>

            <TextView
                android:fontFamily="sans-serif-light"
                android:textColor="#000000"
                android:id="@+id/zamalek_foul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:text="0"
                android:textSize="56sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/foul_zamalek"
                android:onClick="addFoulForZamalek"/>

            <TextView
                android:fontFamily="sans-serif-light"
                android:textColor="#000000"
                android:id="@+id/zamalek_offside"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:text="0"
                android:textSize="56sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/offside_zamalek"
                android:onClick="addOffsideForZamalek"/>


        </LinearLayout>


        <View
            android:layout_marginTop="16dp"
            android:layout_width="1dp"
            android:background="@android:color/darker_gray"
            android:layout_height="match_parent"
           />

        <LinearLayout
            android:layout_marginTop="16dp"
            android:id="@+id/layout_alahly"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:paddingBottom="8dp"
                    android:textSize="14sp"
                    android:textColor="#616161"
                    android:fontFamily="sans-serif-medium"
                    android:id="@+id/alahly_Text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/alahly_team"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/alahly_Text_view"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:src="@drawable/alahly" />
            </RelativeLayout>

            <TextView
                android:fontFamily="sans-serif-light"
                android:textColor="#000000"
                android:id="@+id/alahly_goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:text="0"
                android:textSize="56sp" />


            <Button
                android:onClick="addGoalForAlahly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/goal_alahly" />


            <TextView
                android:fontFamily="sans-serif-light"
                android:textColor="#000000"
                android:id="@+id/alahly_foul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:text="0"
                android:textSize="56sp" />


            <Button
                android:onClick="addFoulForAlahly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/foul_alahly" />


            <TextView
                android:fontFamily="sans-serif-light"
                android:textColor="#000000"
                android:id="@+id/alahly_offside"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:text="0"
                android:textSize="56sp" />


            <Button
                android:onClick="addOffsideForAlahly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/offside_alahly" />


        </LinearLayout>


    </LinearLayout>


    <Button
        android:onClick="reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/reset"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>

